<!--
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <!-- General -->
    <string name="general_app_name" translatable="false">Opendoor</string>
    <string name="general_yes">Yes</string>
    <string name="general_no">No</string>
    <string name="general_settings">Settings</string>

    <!-- Permissions -->
    <string name="permissions_denied_multiple">Opendoor is unable run due to insufficient permissions, please go to settings and grant all permissions.</string>
    <string name="permissions_denied_contact_read">Read contacts permission is required to select from contacts.</string>

    <!-- Shortcuts -->
    <string name="shortcut_short_label_user">Add user</string>
    <string name="shortcut_long_label_user">Add new user</string>
    <string name="shortcut_disabled">Disabled</string>
    <string name="shortcut_short_label_settings">Settings</string>
    <string name="shortcut_long_label_settings">Settings</string>

    <!-- User Activity -->
    <string name="user_activity_title_edit_user">Edit user</string>
    <string name="user_activity_title_new_user">Add new user</string>
    <string name="user_activity_error_incorrect_input">Incorrect input, please enter all fields.</string>
    <string name="user_activity_name">Name</string>
    <string name="user_activity_phone">Phone</string>
    <string name="user_activity_password">Password</string>
    <string name="user_activity_select_from_contacts">Select from contacts</string>

    <!-- User List Adapter -->
    <string name="user_list_adapter_delete_question">Do you want to delete</string>
    <string name="user_list_adapter_delete_question_mark" translatable="false">\?</string>
    <string name="user_list_adapter_delete_user">Delete user</string>

    <!-- Settings Activity -->
    <string name="settings_activity_title_dial_phone_number">Dial phone number</string>
    <string name="settings_activity_default_dial_phone_number" translatable="false">+15417543010</string>
    <string name="settings_activity_title">Settings</string>

    <!-- About Activity -->
    <string name="about_activity_title">About</string>
    <string name="about_activity_caption" translatable="false">Opendoor is open source software licensed under the GNU General Public License v3 (GPL v3).</string>
    <string name="about_activity_error_no_license" translatable="false">"Unable to load LICENSE.txt resource. Please see https://github.com/willeponken/Opendoor for license."</string>
    <string name="about_activity_source_code">Source code for Opendoor is available at: \nhttps://github.com/ArcticLabs/Opendoor</string>

    <!-- Intro Activity -->
    <string name="intro_activity_welcome">Welcome to Opendoor</string>
    <string name="intro_activity_wel">This intro will help you setup Opendoor</string>
    <string name="intro_activity_description_permissions">For Opendoor to work you need to accept the permissions in the following step. The permissions are crucial and the app will not run without them.</string>
    <string name="intro_activity_permissions">Permissions</string>
    <string name="intro_activity_default_number">Default number</string>
    <string name="intro_activity_set_default_number">Set default number</string>
    <string name="intro_activity_default_number_description">Choose you address or enter phone number</string>
    <string name="intro_activity_custom_number">Custom number</string>
    <string name="intro_activity_choose">Choose address/number</string>

</resources>
