<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="settings"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_settings"
        android:shortcutShortLabel="@string/shortcut_short_label_settings"
        android:shortcutLongLabel="@string/shortcut_long_label_settings"
        android:shortcutDisabledMessage="@string/shortcut_disabled">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="me.willeponken.opendoor"
            android:targetClass="me.willeponken.opendoor.SettingsActivity" />
        <categories android:name="android.shortcut.settings" />
    </shortcut>
    <shortcut
        android:shortcutId="add"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_person_add"
        android:shortcutShortLabel="@string/shortcut_short_label_user"
        android:shortcutLongLabel="@string/shortcut_long_label_user"
        android:shortcutDisabledMessage="@string/shortcut_disabled">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="me.willeponken.opendoor"
            android:targetClass="me.willeponken.opendoor.UserActivity" />
        <categories android:name="android.shortcut.add" />
    </shortcut>
</shortcuts>